# NTUGR_v2

./: .gitignore  Dockerfile  README.md  run.sh
evaluation/: evaluation.sh  evaluator  evaluator.cpp  makefile
src/: CMakeLists.txt  global.h  main.cpp
src/basic/: CMakeLists.txt  design.cpp  design.h  dimension.h  layer.h  metrics.h  netlist.h
src/flute/: CMakeLists.txt  flute.h  global.h
src/gr/: CMakeLists.txt  GRNet.cpp  GRNet.h  GRTree.cpp  GRTree.h  GlobalRouter.cpp  GlobalRouter.h  GridGraph.cpp  GridGraph.h  MazeRoute.cpp  MazeRoute.h  PatternRoute.cpp  PatternRoute.h  example.cu  example.h
src/utils/: log.cpp  log.h  robin_hood.h  utils.h
